--- a/myserver/package.json
+++ b/myserver/package.json
@@ -1,23 +1,23 @@
 {
-    "name": "structuredlogin",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-      "start": "node app.js"
-    },
-    "dependencies": {
-      "body-parser": "^1.15.2",
-      "cookie-parser": "^1.4.3",
-      "errorhandler": "^1.4.3",
-      "express": "^4.14.0",
-      "express-error-handler": "^1.1.0",
-      "express-session": "^1.14.2",
-      "http": "0.0.0",
-      "mongodb": "^2.2.36",
-      "mongoose": "^4.13.19",
-      "mysql": "^2.12.0",
-      "path": "^0.12.7",
-      "serve-static": "^1.11.1"
-    }
+  "name": "structuredlogin",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^3.0.1",
+    "errorhandler": "^1.4.3",
+    "express": "^4.14.0",
+    "express-error-handler": "^1.1.0",
+    "express-session": "^1.14.2",
+    "http": "0.0.0",
+    "mongodb": "^2.2.36",
+    "mongoose": "^4.13.19",
+    "mysql": "^2.12.0",
+    "path": "^0.12.7",
+    "serve-static": "^1.11.1"
   }
-  
+}
